--- a/web/index.html
+++ b/web/index.html
@@ -32,8 +32,8 @@
   </script>
   <script src="main.dart.js" type="application/javascript"></script>
   <script src="/__/firebase/8.6.3/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
-  <script src="/__/firebase/8.6.3/firebase-analytics.js"></script>
+  <script src="/__/firebasejs/8.6.3/firebase-firestore.js"></script>
+  <script src="/__/firebasejs/8.6.3/firebase-auth.js"></script>
   <script src="/__/firebase/init.js"></script>
 
 </body>
